[gd_scene load_steps=4 format=3 uid="uid://b54akdv5y43f6"]

[ext_resource type="Script" path="res://DevTools/MapEditor/MapEditor.gd" id="1"]
[ext_resource type="Script" path="res://DevTools/MapEditor/Cam/Cam.gd" id="2"]
[ext_resource type="Theme" uid="uid://da02gjqpcj223" path="res://Resources/Themes/MapEditor.tres" id="5"]

[node name="MapEditor" type="Node2D"]
z_index = 10
script = ExtResource("1")

[node name="Cam" type="Camera2D" parent="."]
visible = false
zoom = Vector2(0.5, 0.5)
script = ExtResource("2")

[node name="UIElements" type="CanvasLayer" parent="."]

[node name="MC" type="MarginContainer" parent="UIElements"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GC" type="GridContainer" parent="UIElements/MC"]
layout_mode = 2
columns = 4

[node name="Info" type="VBoxContainer" parent="UIElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Chunk" type="RichTextLabel" parent="UIElements/MC/GC/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Chunk: "
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Cell" type="RichTextLabel" parent="UIElements/MC/GC/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Cell: "
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Elevation" type="RichTextLabel" parent="UIElements/MC/GC/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Elevation: 0"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="Filter" type="RichTextLabel" parent="UIElements/MC/GC/Info"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("5")
text = "Filter: \"\""
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="null" type="VBoxContainer" parent="UIElements/MC/GC/Info"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveEdit" type="LineEdit" parent="UIElements/MC/GC/Info"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5")
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="UIElements/MC/GC/Info/SaveEdit"]
layout_mode = 0
offset_top = -26.0
offset_right = 355.0
offset_bottom = 2.0
theme = ExtResource("5")
text = "Save Map"

[node name="LoadEdit" type="LineEdit" parent="UIElements/MC/GC/Info"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5")
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="UIElements/MC/GC/Info/LoadEdit"]
layout_mode = 0
offset_top = -26.0
offset_right = 355.0
offset_bottom = 2.0
theme = ExtResource("5")
text = "Load Map"

[node name="FilterEdit" type="LineEdit" parent="UIElements/MC/GC/Info"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5")
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="UIElements/MC/GC/Info/FilterEdit"]
layout_mode = 0
offset_top = -26.0
offset_right = 355.0
offset_bottom = 2.0
theme = ExtResource("5")
text = "Filter"

[node name="Goto" type="LineEdit" parent="UIElements/MC/GC/Info"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("5")
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false

[node name="RichTextLabel" type="RichTextLabel" parent="UIElements/MC/GC/Info/Goto"]
layout_mode = 0
offset_top = -26.0
offset_right = 355.0
offset_bottom = 2.0
theme = ExtResource("5")
text = "Go to:"

[node name="null" type="VBoxContainer" parent="UIElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="null2" type="VBoxContainer" parent="UIElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TileScroll" type="VBoxContainer" parent="UIElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TMSelect" type="OptionButton" parent="UIElements/MC/GC/TileScroll"]
layout_mode = 2
mouse_filter = 1

[node name="ItemList" type="ItemList" parent="UIElements/MC/GC/TileScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
icon_scale = 2.0

[node name="BGElements" type="CanvasLayer" parent="."]
layer = 0

[node name="MC" type="MarginContainer" parent="BGElements"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GC" type="GridContainer" parent="BGElements/MC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="null" type="VBoxContainer" parent="BGElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="null2" type="VBoxContainer" parent="BGElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="null3" type="VBoxContainer" parent="BGElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UIBG" type="VBoxContainer" parent="BGElements/MC/GC"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="BGElements/MC/GC/UIBG"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
